# FlintESPJVM

./: .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  LICENSE.txt  README.md  partitions.csv  sdkconfig  sdkconfig.defaults
BUILD SYSTEM/ESP32/: CMakeLists.txt
BUILD SYSTEM/ESP32-S2FN4R2/: CMakeLists.txt  sdkconfig.defaults
BUILD SYSTEM/ESP32-S3FH4R2/: CMakeLists.txt  partitions.csv  sdkconfig.defaults
BUILD_SYSTEM/: Common.cmake  FlintJVM.cmake
BUILD_SYSTEM/ESP32/: CMakeLists.txt  sdkconfig.defaults  sdkconfig.defaults.esp32
BUILD_SYSTEM/ESP32-C3FH4/: CMakeLists.txt  sdkconfig.defaults
BUILD_SYSTEM/ESP32-C3FH4/main/: CMakeLists.txt
BUILD_SYSTEM/ESP32-C6FH4/: CMakeLists.txt  sdkconfig.defaults  sdkconfig.defaults.esp32c6
BUILD_SYSTEM/ESP32-C6FH4/main/: CMakeLists.txt
BUILD_SYSTEM/ESP32-C6FH8/: CMakeLists.txt  sdkconfig.defaults  sdkconfig.defaults.esp32c6
BUILD_SYSTEM/ESP32-C6FH8/main/: CMakeLists.txt
BUILD_SYSTEM/ESP32-S2FN4R2/: CMakeLists.txt  partitions.csv  sdkconfig.defaults  sdkconfig.defaults.esp32s2
BUILD_SYSTEM/ESP32-S2FN4R2/main/: CMakeLists.txt
BUILD_SYSTEM/ESP32-S3FH4R2/: CMakeLists.txt  sdkconfig.defaults  sdkconfig.defaults.esp32s3
BUILD_SYSTEM/ESP32-S3FH4R2/main/: CMakeLists.txt
BUILD_SYSTEM/ESP32-S3N16R8/: CMakeLists.txt  sdkconfig.defaults
BUILD_SYSTEM/ESP32-S3N16R8/main/: CMakeLists.txt
BUILD_SYSTEM/ESP32-S3N16RX/: CMakeLists.txt  partitions.csv  sdkconfig.defaults  sdkconfig.defaults.esp32s3
BUILD_SYSTEM/ESP32-S3N16RX/main/: CMakeLists.txt
BUILD_SYSTEM/ESP32-S3N4RX/: CMakeLists.txt  sdkconfig.defaults  sdkconfig.defaults.esp32s3
BUILD_SYSTEM/ESP32-S3N4RX/main/: CMakeLists.txt
BUILD_SYSTEM/ESP32-S3N8R8/: CMakeLists.txt  sdkconfig.defaults  sdkconfig.defaults.esp32s3
BUILD_SYSTEM/ESP32-S3N8R8/main/: idf_component.yml
BUILD_SYSTEM/ESP32-S3N8RX/: CMakeLists.txt  partitions.csv  sdkconfig.defaults.esp32s3
BUILD_SYSTEM/ESP32-S3N8RX/main/: CMakeLists.txt
BUILD_SYSTEM/ESP32/main/: CMakeLists.txt  idf_component.yml
BUILD_SYSTEM/Resources/: FlintESPJDK_V0.0.2.img
ESP32/: partitions.csv  sdkconfig.defaults  sdkconfig.defaults.esp32
ESP32-S2/: CMakeLists.txt  sdkconfig.defaults  sdkconfig.defaults.esp32s2
ESP32-S2/main/: CMakeLists.txt
ESP32-S3/: CMakeLists.txt  partitions.csv  sdkconfig.defaults  sdkconfig.defaults.esp32s3
ESP32-S3/main/: CMakeLists.txt
ESP32/main/: CMakeLists.txt
ESPJVM/Native/Inc/: esp_flint_java_inet_address.h  esp_native_adc.h  esp_native_adc_continuous.h  esp_native_bitstream.h  esp_native_can.h  esp_native_common.h  esp_native_dac.h  esp_native_flint_datagram_socket_impl.h  esp_native_flint_inet_address_impl.h  esp_native_flint_socket_impl.h  esp_native_flint_socket_input_stream.h  esp_native_flint_socket_output_stream.h  esp_native_i2c_master.h  esp_native_i2s_master.h  esp_native_onewire.h  esp_native_pin.h  esp_native_port.h  esp_native_spi_master.h  esp_native_uart.h  esp_native_wifi.h  esp_socket.h  esp_system_native_i2c_master.h  esp_system_native_pin.h  esp_system_native_port.h  esp_system_native_spi.h  esp_system_native_spi_master.h  esp_system_native_uart.h  esp_system_native_wifi.h
ESPJVM/Native/Src/: esp_native.cpp  esp_native_adc.cpp  esp_native_adc_continuous.cpp  esp_native_bitstream.cpp  esp_native_can.cpp  esp_native_common.cpp  esp_native_dac.cpp  esp_native_flint_datagram_socket_impl.cpp  esp_native_flint_inet_address_impl.cpp  esp_native_flint_socket_impl.cpp  esp_native_flint_socket_input_stream.cpp  esp_native_flint_socket_output_stream.cpp  esp_native_i2c_master.cpp  esp_native_i2s_master.cpp  esp_native_onewire.cpp  esp_native_pin.cpp  esp_native_port.cpp  esp_native_spi_master.cpp  esp_native_touch_pad.cpp  esp_native_uart.cpp  esp_native_wifi.cpp  esp_socket.cpp  esp_system_native.cpp  esp_system_native_i2c_master.cpp  esp_system_native_pin.cpp  esp_system_native_port.cpp  esp_system_native_spi.cpp  esp_system_native_spi_master.cpp  esp_system_native_uart.cpp  esp_system_native_wifi.cpp
ESPJVM/SystemAPI/Src/: esp_system_api.cpp  esp_system_io_api.cpp  esp_system_thread_api.cpp
ESPJVM/User/Inc/: esp_debugger.h  esp_system_native_pin.h  esp_usb_device.h  flint_conf.h
ESPJVM/User/Src/: esp_board_esp32.cpp  esp_board_esp32_c6.cpp  esp_board_esp32_s2.cpp  esp_board_esp32_s3.cpp  esp_system_io_api.cpp  esp_system_native_pin.cpp  esp_uart_debugger.cpp  esp_usb_cdc_debugger.cpp  esp_usb_device.c  esp_usb_serial_jtag_debugger.cpp  main.cpp  usb_device.c
boards/: Common.cmake  FlintJVM.cmake
boards/ESP32/: CMakeLists.txt  partitions.csv  sdkconfig.defaults.esp32
boards/ESP32-C3FH4/: CMakeLists.txt
boards/ESP32-C3FH4/main/: CMakeLists.txt
boards/ESP32-C6FH4/: CMakeLists.txt
boards/ESP32-C6FH4/main/: CMakeLists.txt
boards/ESP32-C6FH8/: CMakeLists.txt
boards/ESP32-C6FH8/main/: CMakeLists.txt
boards/ESP32-S2FN4R2/: CMakeLists.txt  sdkconfig.defaults.esp32s2
boards/ESP32-S2FN4R2/main/: CMakeLists.txt
boards/ESP32-S3FH4R2/: CMakeLists.txt  sdkconfig.defaults.esp32s3
boards/ESP32-S3FH4R2/main/: CMakeLists.txt
boards/ESP32-S3N16RX/: CMakeLists.txt  sdkconfig.defaults.esp32s3
boards/ESP32-S3N16RX/main/: CMakeLists.txt
boards/ESP32-S3N4RX/: CMakeLists.txt
boards/ESP32-S3N4RX/main/: CMakeLists.txt
boards/ESP32-S3N8RX/: CMakeLists.txt  sdkconfig.defaults.esp32s3
boards/ESP32-S3N8RX/main/: CMakeLists.txt
boards/ESP32/main/: CMakeLists.txt  idf_component.yml
espjvm/core/inc/: esp_board.h  flint_conf.h
espjvm/core/src/: esp_board_esp32_c3_c6.cpp  esp_board_esp32_s2.cpp  esp_usb_cdc_debugger.cpp  esp_usb_device.c  esp_usb_serial_jtag_debugger.cpp  main.cpp
espjvm/native/inc/: esp_native_pin.h  (+3 more)
images/: demo1.avif
main/: CMakeLists.txt
main/User/Inc/: esp_uart_debugger.h  flint_conf.h  mjvm_conf.h  usb_cdc.h  usb_device.h  usb_msc.h
main/User/Src/: esp_system_api.cpp  esp_system_directory_api.cpp  esp_system_file_api.cpp  esp_system_memory_api.cpp  esp_system_native.cpp  esp_system_native_pin.cpp  esp_system_thread.cpp  esp_system_thread_api.cpp  esp_uart_debugger.cpp  main.cpp  usb_cdc.c  usb_device.c  usb_msc.c
(+8 files in other folders)
